# internal/controller/controller.go
@@ -6,9 +6,11 @@ import (
 	"delicias-da-lu-service.com/mod/internal/controller/config"
 	"delicias-da-lu-service.com/mod/internal/controller/contact"
 	"delicias-da-lu-service.com/mod/internal/controller/health"
+	homeController "delicias-da-lu-service.com/mod/internal/controller/home"
 	"delicias-da-lu-service.com/mod/internal/controller/menu"
 	"delicias-da-lu-service.com/mod/internal/controller/order"
 	"delicias-da-lu-service.com/mod/internal/controller/system"
+	uploadController "delicias-da-lu-service.com/mod/internal/controller/upload"
 	"delicias-da-lu-service.com/mod/internal/platform/middleware"
 	"delicias-da-lu-service.com/mod/internal/platform/problemdetails"
 	authUsecase "delicias-da-lu-service.com/mod/internal/usecase/auth"
@@ -31,6 +33,8 @@ type APIServer interface {
 		configHandler config.ConfigHandler,
 		orderHandler order.OrderHandler,
 		systemHandler system.Handler,
+		homeHandler homeController.HomeHandler,
+		uploadHandler uploadController.UploadHandler,
 	) error
 }
 
@@ -68,6 +72,8 @@ func (ref apiServerImpl) RegisterRoutes(
 	configHandler config.ConfigHandler,
 	orderHandler order.OrderHandler,
 	systemHandler system.Handler,
+	homeHandler homeController.HomeHandler,
+	uploadHandler uploadController.UploadHandler,
 ) error {
 	v1 := ref.server.Group("/v1")
 
@@ -79,11 +85,19 @@ func (ref apiServerImpl) RegisterRoutes(
 
 	v1.GET("/config/public", configHandler.GetPublic)
 	v1.GET("/menu/items", menuHandler.GetAll)
+	v1.GET("/menu/:category/items", menuHandler.GetAll)
+	v1.POST("/menu/:category/items", menuHandler.Create)
+	v1.GET("/menu/:category/items/:id", menuHandler.GetByID)
+	v1.PUT("/menu/:category/items/:id", menuHandler.Update)
+	v1.DELETE("/menu/:category/items/:id", menuHandler.Delete)
+	v1.PATCH("/menu/:category/items/:id/order", menuHandler.UpdateOrder)
 	v1.GET("/menu/items/:id", menuHandler.GetByID)
 	v1.GET("/cake-builder", cakeBuilderHandler.GetAll)
 	v1.GET("/cake-builder/:type", cakeBuilderHandler.GetByType)
 	v1.GET("/cake-builder/:type/:id", cakeBuilderHandler.GetByID)
 	v1.GET("/contacts", contactHandler.Get)
+	v1.GET("/home/featured-cakes", homeHandler.GetFeaturedCakes)
+	v1.GET("/home/featured-cakes/:id", homeHandler.GetFeaturedCakeByID)
 
 	v1.POST("/orders", orderHandler.Create)
 	v1.GET("/orders/:id", orderHandler.GetByID)
@@ -103,6 +117,13 @@ func (ref apiServerImpl) RegisterRoutes(
 	adminGroup.DELETE("/cake-builder/:type/:id", cakeBuilderHandler.Delete)
 
 	adminGroup.PUT("/contacts", contactHandler.Update)
+
+	adminGroup.POST("/upload", uploadHandler.UploadImage)
+	adminGroup.DELETE("/upload", uploadHandler.DeleteImage)
+
+	adminGroup.POST("/home/featured-cakes", homeHandler.CreateFeaturedCake)
+	adminGroup.PUT("/home/featured-cakes/:id", homeHandler.UpdateFeaturedCake)
+	adminGroup.DELETE("/home/featured-cakes/:id", homeHandler.DeleteFeaturedCake)
 
 	adminGroup.GET("/orders", orderHandler.GetAll)
 	adminGroup.PUT("/orders/:id", orderHandler.UpdateStatus)
