# internal/entity/config/home.go
@@ -1,5 +1,7 @@
 package config
 
+import "time"
+
 type HomeConfig struct {
 	FeaturedCakes []FeaturedCake `json:"featuredCakes" firestore:"featuredCakes"`
 }
@@ -14,4 +16,7 @@ type FeaturedCake struct {
 	Image         string                 `json:"image" firestore:"image"`
 	Description   string                 `json:"description" firestore:"description"`
 	Config        map[string]interface{} `json:"config" firestore:"config"`
+	Order         int                    `json:"order" firestore:"order"`
+	CreatedAt     time.Time              `json:"createdAt" firestore:"createdAt"`
+	UpdatedAt     time.Time              `json:"updatedAt" firestore:"updatedAt"`
 }
